@@ -24,13 +24,13 @@ public class AnkerpayWallet implements IWallet {
 
     @Override
     public Set<String> getCryptoCurrencies() {
-        // Only BTC supported for now
-        return Collections.singleton("BTC");
+        // Support BTC, ETH, TRX, USDT, USDTTRON, USDC, BNB, SOL
+        return Set.of("BTC", "ETH", "TRX", "USDT", "USDTTRON", "USDC", "BNB", "SOL");
     }
 
     @Override
     public String getPreferredCryptoCurrency() {
-        return "BTC";
+        return "BTC"; // Optionally, you can make this configurable
     }
 
     @Override
